// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2:not([disabled]):hover + .fp-CheckboxIcon {
  box-shadow: #ebe8fd 0px 0px 0px 2px !important;
  border-color: #c3bcf9;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #3722ed;
  box-shadow: #c3bcf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #3722ed;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1em solid #3722ed;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #9a9a9a;
}

<div
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 fp-Box fp-Checkbox"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
    id="checkbox"
    type="checkbox"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
  />
</div>
`;

exports[`composition hook should return with Checkbox props 1`] = `
Object {
  "aria-describedby": "",
  "aria-invalid": false,
  "aria-required": undefined,
  "children": <React.Fragment>
    <ForwardRef
      className="css-1k5gy79 fp-CheckboxHiddenInput"
      id=""
      type="checkbox"
      use="input"
    />
    <ForwardRef
      className="css-chyvgt fp-CheckboxIcon"
    />
  </React.Fragment>,
  "className": "css-z0gohc css-1pwrqjj css-3ekj6a fp-Box fp-Checkbox",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

<div
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Checkbox"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2:not([disabled]):hover + .fp-CheckboxIcon {
  box-shadow: #ebe8fd 0px 0px 0px 2px !important;
  border-color: #c3bcf9;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #3722ed;
  box-shadow: #c3bcf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #3722ed;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1em solid #3722ed;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #9a9a9a;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-10 {
  color: #3722ed !important;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 emotion-10 test fp-Box fp-Checkbox fp-Label"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
    id="checkbox"
    type="checkbox"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
  />
</label>
`;

exports[`overrides Checkbox.HiddenInput.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2:not([disabled]):hover + .fp-CheckboxIcon {
  box-shadow: #ebe8fd 0px 0px 0px 2px !important;
  border-color: #c3bcf9;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #3722ed;
  box-shadow: #c3bcf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #3722ed;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1em solid #3722ed;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #9a9a9a;
}

.emotion-2 {
  background-color: red;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Checkbox fp-Label"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
    id="checkbox"
    type="checkbox"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
  />
</label>
`;

exports[`overrides Checkbox.Icon.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2:not([disabled]):hover + .fp-CheckboxIcon {
  box-shadow: #ebe8fd 0px 0px 0px 2px !important;
  border-color: #c3bcf9;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #3722ed;
  box-shadow: #c3bcf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #3722ed;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1em solid #3722ed;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #9a9a9a;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-5 {
  background-color: red;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Checkbox fp-Label"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
    id="checkbox"
    type="checkbox"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
  />
</label>
`;

exports[`overrides Checkbox.Label.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2:not([disabled]):hover + .fp-CheckboxIcon {
  box-shadow: #ebe8fd 0px 0px 0px 2px !important;
  border-color: #c3bcf9;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #3722ed;
  box-shadow: #c3bcf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #3722ed;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1em solid #3722ed;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #9a9a9a;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Checkbox fp-Label"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
    id="checkbox"
    type="checkbox"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
  />
</label>
`;

exports[`overrides Checkbox.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2:not([disabled]):hover + .fp-CheckboxIcon {
  box-shadow: #ebe8fd 0px 0px 0px 2px !important;
  border-color: #c3bcf9;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #3722ed;
  box-shadow: #c3bcf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #3722ed;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1em solid #3722ed;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #9a9a9a;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-9 {
  background-color: red;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Checkbox fp-Label"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
    id="checkbox"
    type="checkbox"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
  />
</label>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2:not([disabled]):hover + .fp-CheckboxIcon {
  box-shadow: #ebe8fd 0px 0px 0px 2px !important;
  border-color: #c3bcf9;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #3722ed;
  box-shadow: #c3bcf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #3722ed;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1em solid #3722ed;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #9a9a9a;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Checkbox fp-Label"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
    id="checkbox"
    type="checkbox"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
  />
</label>
`;

exports[`props should render correctly for danger state 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .fp-CheckboxIcon {
  border-color: #bb2a1a;
}

.emotion-2:not(:checked) + .fp-CheckboxIcon {
  box-shadow: #f8e9e8 0px 0px 0px 3px !important;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2:not([disabled]):hover + .fp-CheckboxIcon {
  box-shadow: #f8e9e8 0px 0px 0px 2px !important;
  border-color: #eabfba;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #3722ed;
  box-shadow: #c3bcf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #3722ed;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1em solid #3722ed;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #9a9a9a;
}

<label
  aria-describedby="label"
  aria-invalid="true"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Checkbox fp-Label"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
    id="checkbox"
    type="checkbox"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
  />
</label>
`;

exports[`props should render correctly for success state 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .fp-CheckboxIcon {
  border-color: #107219;
}

.emotion-2:not(:checked) + .fp-CheckboxIcon {
  box-shadow: #e7f0e8 0px 0px 0px 3px !important;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2:not([disabled]):hover + .fp-CheckboxIcon {
  box-shadow: #e7f0e8 0px 0px 0px 2px !important;
  border-color: #b7d4ba;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #3722ed;
  box-shadow: #c3bcf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #3722ed;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1em solid #3722ed;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #9a9a9a;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Checkbox fp-Label"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
    id="checkbox"
    type="checkbox"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
  />
</label>
`;

exports[`props should render correctly for warning state 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .fp-CheckboxIcon {
  border-color: #ed9c22;
}

.emotion-2:not(:checked) + .fp-CheckboxIcon {
  box-shadow: #fdf5e8 0px 0px 0px 3px !important;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2:not([disabled]):hover + .fp-CheckboxIcon {
  box-shadow: #fdf5e8 0px 0px 0px 2px !important;
  border-color: #f9e1bc;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #3722ed;
  box-shadow: #c3bcf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #3722ed;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1em solid #3722ed;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #9a9a9a;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Checkbox fp-Label"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
    id="checkbox"
    type="checkbox"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
  />
</label>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2:not([disabled]):hover + .fp-CheckboxIcon {
  box-shadow: #ebe8fd 0px 0px 0px 2px !important;
  border-color: #c3bcf9;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #3722ed;
  box-shadow: #c3bcf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #3722ed;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1em solid #3722ed;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #9a9a9a;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-10 {
  background-color: #3722ed !important;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 emotion-10 fp-Box fp-Checkbox fp-Label"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
    id="checkbox"
    type="checkbox"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
  />
</label>
`;

exports[`props should render correctly with checked 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2:not([disabled]):hover + .fp-CheckboxIcon {
  box-shadow: #ebe8fd 0px 0px 0px 2px !important;
  border-color: #c3bcf9;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #3722ed;
  box-shadow: #c3bcf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #3722ed;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1em solid #3722ed;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #9a9a9a;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Checkbox fp-Label"
>
  <input
    checked=""
    class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
    id="checkbox"
    type="checkbox"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
  />
</label>
`;

exports[`props should render correctly with defaultChecked 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2:not([disabled]):hover + .fp-CheckboxIcon {
  box-shadow: #ebe8fd 0px 0px 0px 2px !important;
  border-color: #c3bcf9;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #3722ed;
  box-shadow: #c3bcf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #3722ed;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1em solid #3722ed;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #9a9a9a;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Checkbox fp-Label"
>
  <input
    checked=""
    class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
    id="checkbox"
    type="checkbox"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
  />
</label>
`;

exports[`props should render correctly with disabled 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2:not([disabled]):hover + .fp-CheckboxIcon {
  box-shadow: #ebe8fd 0px 0px 0px 2px !important;
  border-color: #c3bcf9;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #3722ed;
  box-shadow: #c3bcf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #3722ed;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1em solid #3722ed;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #9a9a9a;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Checkbox fp-Label"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
    disabled=""
    id="checkbox"
    type="checkbox"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
  />
</label>
`;

exports[`props should render correctly with indeterminate 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2:not([disabled]):hover + .fp-CheckboxIcon {
  box-shadow: #ebe8fd 0px 0px 0px 2px !important;
  border-color: #c3bcf9;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #3722ed;
  box-shadow: #c3bcf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #3722ed;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-color: #3722ed;
  height: 0.125em;
  width: 0.625em;
  top: calc(50% - 0.0625em);
  left: calc(50% - 0.3125em);
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #9a9a9a;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Checkbox fp-Label"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
    id="checkbox"
    type="checkbox"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
  />
</label>
`;

exports[`props should render correctly with isRequired 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2:not([disabled]):hover + .fp-CheckboxIcon {
  box-shadow: #ebe8fd 0px 0px 0px 2px !important;
  border-color: #c3bcf9;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #3722ed;
  box-shadow: #c3bcf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #3722ed;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1em solid #3722ed;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #9a9a9a;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  aria-required="true"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Checkbox fp-Label"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
    id="checkbox"
    type="checkbox"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
  />
</label>
`;

exports[`props should render correctly with label 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-13.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2:not([disabled]):hover + .fp-CheckboxIcon {
  box-shadow: #ebe8fd 0px 0px 0px 2px !important;
  border-color: #c3bcf9;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #3722ed;
  box-shadow: #c3bcf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #3722ed;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1em solid #3722ed;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #9a9a9a;
}

.emotion-9.emotion-9 {
  font-weight: 400;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-8 {
  margin-left: 0.5rem !important;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-13 fp-Box fp-Checkbox fp-Label"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
    id="checkbox"
    type="checkbox"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
  />
  <span
    class="emotion-6 emotion-0 emotion-8 emotion-9 fp-CheckboxLabel fp-Box fp-Label"
    for="checkbox"
    id="label"
  >
    Hello world
  </span>
</label>
`;

exports[`props should render correctly with name 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2:not([disabled]):hover + .fp-CheckboxIcon {
  box-shadow: #ebe8fd 0px 0px 0px 2px !important;
  border-color: #c3bcf9;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #3722ed;
  box-shadow: #c3bcf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #3722ed;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1em solid #3722ed;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #9a9a9a;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Checkbox fp-Label"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
    id="checkbox"
    name="checkboxRocks"
    type="checkbox"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
  />
</label>
`;

exports[`props should render correctly with value 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2:not([disabled]):hover + .fp-CheckboxIcon {
  box-shadow: #ebe8fd 0px 0px 0px 2px !important;
  border-color: #c3bcf9;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #3722ed;
  box-shadow: #c3bcf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #3722ed;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1em solid #3722ed;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #9a9a9a;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Checkbox fp-Label"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
    id="checkbox"
    type="checkbox"
    value="checkboxValue"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
  />
</label>
`;

exports[`theming Checkbox.HiddenInput.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2:not([disabled]):hover + .fp-CheckboxIcon {
  box-shadow: #ebe8fd 0px 0px 0px 2px !important;
  border-color: #c3bcf9;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #3722ed;
  box-shadow: #c3bcf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #3722ed;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1em solid #3722ed;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #9a9a9a;
}

.emotion-2 {
  background-color: red;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Checkbox fp-Label"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
    id="checkbox"
    type="checkbox"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
  />
</label>
`;

exports[`theming Checkbox.Icon.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2:not([disabled]):hover + .fp-CheckboxIcon {
  box-shadow: #ebe8fd 0px 0px 0px 2px !important;
  border-color: #c3bcf9;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #3722ed;
  box-shadow: #c3bcf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #3722ed;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1em solid #3722ed;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #9a9a9a;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-5 {
  background-color: red;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Checkbox fp-Label"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
    id="checkbox"
    type="checkbox"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
  />
</label>
`;

exports[`theming Checkbox.Label.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2:not([disabled]):hover + .fp-CheckboxIcon {
  box-shadow: #ebe8fd 0px 0px 0px 2px !important;
  border-color: #c3bcf9;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #3722ed;
  box-shadow: #c3bcf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #3722ed;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1em solid #3722ed;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #9a9a9a;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Checkbox fp-Label"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
    id="checkbox"
    type="checkbox"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
  />
</label>
`;

exports[`theming Checkbox.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: white;
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-CheckboxIcon {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.emotion-2:not([disabled]):hover + .fp-CheckboxIcon {
  box-shadow: #ebe8fd 0px 0px 0px 2px !important;
  border-color: #c3bcf9;
}

.emotion-2:focus + .fp-CheckboxIcon {
  border-color: #3722ed;
  box-shadow: #c3bcf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-CheckboxIcon {
  border-color: #3722ed;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .fp-CheckboxIcon::before {
  border: 0.1em solid #3722ed;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .fp-CheckboxIcon::before {
  border-color: #9a9a9a;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-9 {
  background-color: red;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Checkbox fp-Label"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-CheckboxHiddenInput fp-Box"
    id="checkbox"
    type="checkbox"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-CheckboxIcon fp-Box"
  />
</label>
`;
